rke2.d/bioskop/master/manifests.d/mesh/headplane/02-service-headplane.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|${headscale-namespace}|headplane'
    kpt.dev/package-layer: mesh
    kpt.dev/package-name: headplane
  labels:
    app: headplane
  name: headplane
  namespace: headscale-system
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: headplane
  type: LoadBalancer
