rke2.d/bioskop/master/manifests.d/mesh/headplane/02-ingress-headplane.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: networking.k8s.io|Ingress|${headscale-namespace}|headplane
    kpt.dev/package-layer: mesh
    kpt.dev/package-name: headplane
    kubernetes.io/ingress.class: cilium
    io.cilium/lb-ipam-ips: 192.168.1.194
    lab42.io/mdns.enabled: "true"
    lab42.io/mdns.name: headplane
    lab42.io/mdns.host: headplane
  name: headplane
  namespace: headscale-system
spec:
  ingressClassName: cilium
  rules:
    - host: headplane.local
      http:
        paths:
          - backend:
              service:
                name: headplane
                port:
                  number: 3000
            path: /
            pathType: Prefix
